packages/typ/tests/fixtures/diagnostics/0830_polyvar_tuple_payload_mismatch_07.ml.expected
File "0830_polyvar_tuple_payload_mismatch_07.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0830_polyvar_tuple_payload_mismatch_07 is not a valid module name.

File "0830_polyvar_tuple_payload_mismatch_07.ml", line 1, characters 35-39:
1 | let _ : [ `P of int * bool ] = `P (true, 6)
                                       ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
